--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,13 @@ classifiers = [
     "Operating System :: OS Independent"
 ]
 dependencies = [
-    "mypy>=0.971",
     "requests>=2.20.0",
-    "ruff==0.6.6",
+]
+[project.optional-dependencies]
+dev = [
+  "pre-commit>=3.5.0",
+  "ruff==0.6.6",
+  "mypy>=0.971",
 ]
 keywords = ["payway", "westpac", "api", "client"]
 
