--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,17 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
+keywords = ["payway", "westpac", "api", "client"]
 dependencies = [
     "requests>=2.20.0",
 ]
+
 [project.optional-dependencies]
 dev = [
-  "pre-commit>=3.5.0",
+  # "pre-commit>=3.5.0",
   "ruff==0.6.6",
   "mypy>=0.971",
 ]
-keywords = ["payway", "westpac", "api", "client"]
 
 [tool.mypy]
 python_version = "3.8"
@@ -130,3 +131,8 @@ filterwarnings = [
 [tool.bandit]
 exclude_dirs = ["tests", "migrations"]
 tests = ["B201", "B301"]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=3.5.0",
+]
